turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value Couleur
	if (getCouleurSol() == Couleur.white) {
                               ^LangtonsAnt:10: error: not found: value Couleur
	else if (getCouleurSol() == Couleur.black) {
                                    ^