turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	if (getCouleurSol() == Couleur.white) {
		setCouleurBrosse(Color.black)
		baisseBrosse()
		leveBrosse()
		droite()
		avance()
	}
	else if (getCouleurSol() == Couleur.black) {
		setCouleurBrosse(Color.white)
		baisseBrosse()
		leveBrosse()
		gauche()
		avance()
	}
}
